force-app/main/default/objects/Payor__c/Payor__c.object-meta.xml
<CustomObject>
    <description>This object contains the purchased payor information acquired from IMS. The data is provided on an annual basis.</description>
    <label>Payer</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Payor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>