force-app/main/default/objects/Payor__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to deactivate all payer information from the 360 app.</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>