force-app/main/default/objects/Payor__c/fields/Precent__c.field-meta.xml
<CustomField>
    <fullName>Precent__c</fullName>
    <label>% Claim</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>